Fix mobile spacing and extensions href

--- a/assets/css/ecommerce.css
+++ b/assets/css/ecommerce.css
@@ -72,9 +72,11 @@ body.woocommerce_page_wc-addons-landing-page #screen-meta-links {
 }
 .wc-addons-landing-page__button-container .button-secondary {
 	background: white;
+	color: var( --wp-admin-theme-color ) !important;
 }
 .wc-addons-landing-page__button-container .button-primary {
 	margin-right: 20px;
+	color: white !important;
 }
 
 .wc-addons-landing-page__hero-image-container--mobile {
@@ -157,17 +159,25 @@ body.woocommerce_page_wc-addons-landing-page #screen-meta-links {
 	}
 }
 @media screen and (max-width: 600px) {
+	.wc-addons-landing-page__section-header {
+		display: none;
+	}
 	.wc-addons-landing-page__title {
 		font-size: 24px;
 		line-height: 32px;
+		margin: 40px auto .67em;
 	}
 	.wc-addons-landing-page__description {
 		font-size: 13px;
 		line-height: 16px;
 	}
+	.wc-addons-landing-page__button-container {
+		margin: 0 auto 80px;
+	}
 	.wc-addons-landing-page__sub-title {
 		font-size: 20px;
 		line-height: 28px;
+		margin: 50px auto .67em;
 	}
 	.wc-addons-landing-page__hero-image-container--mobile {
 		display: block;
@@ -180,6 +190,7 @@ body.woocommerce_page_wc-addons-landing-page #screen-meta-links {
 	}
 	.wc-addons-landing-page__features-grid {
 		flex-wrap: wrap;
+		margin: 32px auto 0;
 	}
 	.wc-addons-landing-page__features-grid__item {
 		width: 100%;
